--- a/LinqSelectVsFor/LinqSelectVsFor.csproj
+++ b/LinqSelectVsFor/LinqSelectVsFor.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ResultImage\" />
+  </ItemGroup>
+
 </Project>
