--- a/LinqAnyVsAll/LinqAnyVsAll.csproj
+++ b/LinqAnyVsAll/LinqAnyVsAll.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ResultImage\" />
+    <Compile Remove="Corporate.cs" />
+    <Compile Remove="CorporateUpdate.cs" />
   </ItemGroup>
 
   <ItemGroup>
