--- a/LinqAnyVsAll/LinqAnyVsAll.csproj
+++ b/LinqAnyVsAll/LinqAnyVsAll.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BenchöarlTests.Core\BenchmarkTests.Core.csproj" />
+    <ProjectReference Include="..\BenchmarkTests.Core\BenchmarkTests.Core.csproj" />
   </ItemGroup>
 
 </Project>
